remove epsilongc it doesnt seem to help any more